configuration-kubernates/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shopping-api
  labels:
    app: shopping-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shopping-api
  template:
    metadata:
      labels:
        app: shopping-api
    spec:
      containers:
        - name: shopping-api
          image: jonathangari/shopping-api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8082
