configuration-kubernates/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-api
  labels:
    run: shopping-api
spec:
  type: LoadBalancer
  externalIPs:
    - 192.168.0.10
  ports:
    - port: 8082
      targetPort: 8082
      protocol: TCP
  selector:
    app: shopping-api
